--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest __tests__/**/*.spec.js",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -17,19 +17,26 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
+    "@jonny/react-native-mock": "^0.4.2",
     "@react-native-community/eslint-config": "^1.1.0",
     "@testing-library/react-native": "^7.1.0",
     "babel-jest": "^25.1.0",
     "detox": "^18.6.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^6.5.1",
     "eslint-plugin-detox": "^1.0.0",
     "eslint-plugin-jest": "^24.1.5",
     "jest": "^25.1.0",
     "jest-circus": "^26.6.3",
     "metro-react-native-babel-preset": "^0.59.0",
+    "mocha": "^8.3.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [
+      "<rootDir>/__tests__/setup.js"
+    ]
   }
 }
