--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest __tests__/**/*.spec.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "detox": "detox test --configuration android.debug -r"
   },
   "dependencies": {
     "axios": "^0.21.1",
